# elementary-app-template

./: README.md  meson.build  {{APPLICATION_ID}}.yml
data/: meson.build  yourrepositoryname.appdata.xml.in  yourrepositoryname.desktop.in  yourrepositoryname.gresource.xml  yourrepositoryname.gschema.xml  yourrepositoryname.metainfo.xml.in  {{PROJECT_NAME}}.appdata.xml.in  {{PROJECT_NAME}}.desktop.in  {{PROJECT_NAME}}.gresource.xml  {{PROJECT_NAME}}.gschema.xml  {{PROJECT_NAME}}.metainfo.xml.in
po/: com.github.yourusername.yourrepositoryname.pot  de.po  es.po  io.github.yourusername.yourrepositoryname.pot
po/extra/: POTFILES  extra.pot
src/: Application.vala  MainWindow.vala
